<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_component</name>
  <version>2.0.0</version>
  <description>
    A dynamic configurabale component. The IOP services are loaded as plugins
    while start of this component. The function of the component depend on loaded services.
  </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>

  <url type="website">https://github.com/fkie/iop_jaus_core.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fkie_iop_builder</depend>
  <depend>diagnostic_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
