<?xml version="1.0"?>
<package>
  <name>fkie_iop_list_manager</name>
  <version>1.1.0</version>
  <description>List Manager to support services with list operations.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fkie_iop_management</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>fkie_iop_component</run_depend>
  <run_depend>fkie_iop_management</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>