<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_management</name>
  <version>1.1.0</version>
  <description>The full functional implementation of JAUS Management service.
    This service can be included into other components.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_core.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fkie_iop_accesscontrol</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>