<?xml version="1.0"?>
<package>
  <name>fkie_iop_ocu_slavelib</name>
  <version>1.1.0</version>
  <description>A helper library for ROS/IOP-Bridge OCU nodes. This library combines the IOP client services (AccessControlClient, DiscoveryClient and ManagementClient)
      and listen to the command of the master to synchronize the access of multiple OCU client to robot services. </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_core.git</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fkie_iop_accesscontrol</build_depend>
  <build_depend>fkie_iop_discovery</build_depend>
  <build_depend>fkie_iop_management</build_depend>
  <build_depend>fkie_iop_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>fkie_iop_accesscontrol</run_depend>
  <run_depend>fkie_iop_discovery</run_depend>
  <run_depend>fkie_iop_management</run_depend>
  <run_depend>fkie_iop_msgs</run_depend>
</package>