<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_ocu_slavelib</name>
  <version>2.1.0</version>
  <description>A helper library for ROS/IOP-Bridge OCU nodes. This library combines the IOP client services (AccessControlClient, DiscoveryClient and ManagementClient)
      and listen to the command of the master to synchronize the access of multiple OCU client to robot services. </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_core.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fkie_iop_discovery</depend>
  <depend>fkie_iop_management</depend>
  <depend>fkie_iop_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>