<?xml version="1.0"?>
<package>
  <name>iop_component_fkie</name>
  <version>1.1.0</version>
  <description>
    A dynamic configurabale component. The IOP services are loaded as plugins
    while start of this component. The function of the component depend on loaded services.
  </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>

  <!-- <url type="website">http://</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_builder_fkie</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tinyxml</build_depend>
  <run_depend>iop_builder_fkie</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tinyxml</run_depend>

</package>
